Venda Back fixes